// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exchange should not render filler exchange cards 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <div
      class="pt-16 border-t-20 border-theme-neutral-contrast"
    >
      <div
        class="container mx-auto"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 md:text-4xl"
              data-testid="header__title"
            >
              Exchange
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Trade your money safely from the comfort of your wallet.
            </div>
          </div>
        </div>
        <div
          class="mt-8 mb-16"
        >
          <div
            class="relative"
          >
            <div
              class="absolute right-0 w-auto -top-12 swiper-pagination space-x-2 swiper-pagination-clickable swiper-pagination-bullets"
            />
            <div
              class="swiper-container swiper-container-initialized swiper-container-horizontal"
              style="height: 155px;"
            >
              <div
                class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
              >
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast hover:border-theme-background"
                    data-testid="Exchange__exchange-card-changenow-plugin"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          ChangeNOW Plugin
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast hover:border-theme-background"
                    data-testid="Exchange__exchange-card-binance"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Binance
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast hover:border-theme-background"
                    data-testid="Exchange__exchange-card-atomars"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Atomars
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX col-span-2 border-theme-primary-contrast"
                    data-testid="Exchange__add-exchange-card"
                  >
                    <div
                      class="flex items-center px-12 my-auto font-semibold text-theme-primary"
                    >
                      <div
                        class="sc-AxirZ iQaTP p-4 mr-4 rounded-lg bg-theme-primary-contrast"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          plus.svg
                        </svg>
                      </div>
                      Add Exchange
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="swiper-notification"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-20 border-theme-neutral-contrast"
    >
      <div
        class="text-center"
      >
        <svg
          class="mx-auto mt-16"
        >
          exchange-cards-banner.svg
        </svg>
        <div
          class="mt-8 text-theme-neutral-dark"
        >
          Select one of the exchanges you have installed
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should open & close add exchange modal 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <div
      class="pt-16 border-t-20 border-theme-neutral-contrast"
    >
      <div
        class="container mx-auto"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 md:text-4xl"
              data-testid="header__title"
            >
              Exchange
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Trade your money safely from the comfort of your wallet.
            </div>
          </div>
        </div>
        <div
          class="mt-8 mb-16"
        >
          <div
            class="relative"
          >
            <div
              class="absolute right-0 w-auto -top-12 swiper-pagination space-x-2 swiper-pagination-clickable swiper-pagination-bullets"
            />
            <div
              class="swiper-container swiper-container-initialized swiper-container-horizontal"
              style="height: 155px;"
            >
              <div
                class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
              >
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast hover:border-theme-background"
                    data-testid="Exchange__exchange-card-changenow-plugin"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          ChangeNOW Plugin
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast hover:border-theme-background"
                    data-testid="Exchange__exchange-card-binance"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Binance
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast hover:border-theme-background"
                    data-testid="Exchange__exchange-card-atomars"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Atomars
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX col-span-2 border-theme-primary-contrast"
                    data-testid="Exchange__add-exchange-card"
                  >
                    <div
                      class="flex items-center px-12 my-auto font-semibold text-theme-primary"
                    >
                      <div
                        class="sc-AxirZ iQaTP p-4 mr-4 rounded-lg bg-theme-primary-contrast"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          plus.svg
                        </svg>
                      </div>
                      Add Exchange
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="swiper-notification"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-20 border-theme-neutral-contrast"
    >
      <div
        class="text-center"
      >
        <svg
          class="mx-auto mt-16"
        >
          exchange-cards-banner.svg
        </svg>
        <div
          class="mt-8 text-theme-neutral-dark"
        >
          Select one of the exchanges you have installed
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should open & close add exchange modal when no existing exchanges 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <div
      class="pt-16 border-t-20 border-theme-neutral-contrast"
    >
      <div
        class="container mx-auto"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 md:text-4xl"
              data-testid="header__title"
            >
              Exchange
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Trade your money safely from the comfort of your wallet.
            </div>
          </div>
        </div>
        <div
          class="mt-8 mb-16 grid grid-cols-8 gap-4"
        >
          <div
            class="flex flex-col h-32 border-2 rounded-lg border-theme-primary-contrast col-span-6"
          >
            <div
              class="flex flex-col m-auto text-center"
            >
              <span
                class="font-semibold"
              >
                Your Exchange List
              </span>
              <span
                class="m-auto text-sm text-theme-neutral"
              >
                You don't have an Exchange yet
              </span>
            </div>
          </div>
          <div
            class="sc-AxgMl hCbQhX col-span-2 border-theme-primary-contrast"
            data-testid="Exchange__add-exchange-card"
          >
            <div
              class="flex items-center px-12 my-auto font-semibold text-theme-primary"
            >
              <div
                class="sc-AxirZ iQaTP p-4 mr-4 rounded-lg bg-theme-primary-contrast"
                height="1em"
                width="1em"
              >
                <svg>
                  plus.svg
                </svg>
              </div>
              Add Exchange
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-20 border-theme-neutral-contrast"
    >
      <svg
        class="mx-auto mt-16"
      >
        no-exchanges-banner.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should render 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <div
      class="pt-16 border-t-20 border-theme-neutral-contrast"
    >
      <div
        class="container mx-auto"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 md:text-4xl"
              data-testid="header__title"
            >
              Exchange
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Trade your money safely from the comfort of your wallet.
            </div>
          </div>
        </div>
        <div
          class="mt-8 mb-16 grid grid-cols-8 gap-4"
        >
          <div
            class="flex flex-col h-32 border-2 rounded-lg border-theme-primary-contrast col-span-6"
          >
            <div
              class="flex flex-col m-auto text-center"
            >
              <span
                class="font-semibold"
              >
                Your Exchange List
              </span>
              <span
                class="m-auto text-sm text-theme-neutral"
              >
                You don't have an Exchange yet
              </span>
            </div>
          </div>
          <div
            class="sc-AxgMl hCbQhX col-span-2 border-theme-primary-contrast"
            data-testid="Exchange__add-exchange-card"
          >
            <div
              class="flex items-center px-12 my-auto font-semibold text-theme-primary"
            >
              <div
                class="sc-AxirZ iQaTP p-4 mr-4 rounded-lg bg-theme-primary-contrast"
                height="1em"
                width="1em"
              >
                <svg>
                  plus.svg
                </svg>
              </div>
              Add Exchange
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-20 border-theme-neutral-contrast"
    >
      <svg
        class="mx-auto mt-16"
      >
        no-exchanges-banner.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should render with exchanges 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <div
      class="pt-16 border-t-20 border-theme-neutral-contrast"
    >
      <div
        class="container mx-auto"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 md:text-4xl"
              data-testid="header__title"
            >
              Exchange
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Trade your money safely from the comfort of your wallet.
            </div>
          </div>
        </div>
        <div
          class="mt-8 mb-16"
        >
          <div
            class="relative"
          >
            <div
              class="absolute right-0 w-auto -top-12 swiper-pagination space-x-2 swiper-pagination-clickable swiper-pagination-bullets"
            />
            <div
              class="swiper-container swiper-container-initialized swiper-container-horizontal"
              style="height: 155px;"
            >
              <div
                class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
              >
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast hover:border-theme-background"
                    data-testid="Exchange__exchange-card-changenow-plugin"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          ChangeNOW Plugin
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast hover:border-theme-background"
                    data-testid="Exchange__exchange-card-binance"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Binance
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast hover:border-theme-background"
                    data-testid="Exchange__exchange-card-atomars"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Atomars
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast hover:border-theme-background"
                    data-testid="Exchange__exchange-card-okex"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          OKEx
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX col-span-2 border-theme-primary-contrast"
                    data-testid="Exchange__add-exchange-card"
                  >
                    <div
                      class="flex items-center px-12 my-auto font-semibold text-theme-primary"
                    >
                      <div
                        class="sc-AxirZ iQaTP p-4 mr-4 rounded-lg bg-theme-primary-contrast"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          plus.svg
                        </svg>
                      </div>
                      Add Exchange
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast"
                    data-testid="Exchange__blank-card"
                  >
                    <div
                      class="flex items-center px-12 my-auto font-semibold text-theme-primary-contrast"
                    >
                      <div
                        class="w-12 h-12 mr-4 border-2 rounded-lg border-theme-primary-contrast"
                      />
                      Exchange Name
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast"
                    data-testid="Exchange__blank-card"
                  >
                    <div
                      class="flex items-center px-12 my-auto font-semibold text-theme-primary-contrast"
                    >
                      <div
                        class="w-12 h-12 mr-4 border-2 rounded-lg border-theme-primary-contrast"
                      />
                      Exchange Name
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast"
                    data-testid="Exchange__blank-card"
                  >
                    <div
                      class="flex items-center px-12 my-auto font-semibold text-theme-primary-contrast"
                    >
                      <div
                        class="w-12 h-12 mr-4 border-2 rounded-lg border-theme-primary-contrast"
                      />
                      Exchange Name
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="swiper-notification"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-20 border-theme-neutral-contrast"
    >
      <div
        class="text-center"
      >
        <svg
          class="mx-auto mt-16"
        >
          exchange-cards-banner.svg
        </svg>
        <div
          class="mt-8 text-theme-neutral-dark"
        >
          Select one of the exchanges you have installed
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Exchange should select exchange 1`] = `
<DocumentFragment>
  <div
    data-testid="Exchange"
  >
    <div
      class="pt-16 border-t-20 border-theme-neutral-contrast"
    >
      <div
        class="container mx-auto"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 md:text-4xl"
              data-testid="header__title"
            >
              Exchange
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Trade your money safely from the comfort of your wallet.
            </div>
          </div>
        </div>
        <div
          class="mt-8 mb-16"
        >
          <div
            class="relative"
          >
            <div
              class="absolute right-0 w-auto -top-12 swiper-pagination space-x-2 swiper-pagination-clickable swiper-pagination-bullets"
            />
            <div
              class="swiper-container swiper-container-initialized swiper-container-horizontal"
              style="height: 155px;"
            >
              <div
                class="h-full swiper-wrapper grid grid-cols-8 gap-4"
                style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
              >
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX bg-theme-success-contrast border-theme-success-300 hover:border-theme-success-contrast"
                    data-testid="Exchange__exchange-card-changenow-plugin"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          ChangeNOW Plugin
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast hover:border-theme-background"
                    data-testid="Exchange__exchange-card-binance"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Binance
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX border-theme-primary-contrast hover:border-theme-background"
                    data-testid="Exchange__exchange-card-atomars"
                  >
                    <div
                      class="px-12 my-auto font-semibold"
                    >
                      <div
                        class="flex items-center"
                      >
                        <div
                          class="absolute top-4 right-2 text-theme-primary-light"
                        >
                          <div
                            class="relative"
                            data-testid="dropdown__toggle"
                          >
                            <div
                              class="float-right outline-none cursor-pointer focus:outline-none"
                            >
                              <div
                                class="sc-AxirZ eEbZjj"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  settings.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mr-4"
                        >
                          <svg
                            class="w-12 h-12"
                          >
                            changenow-logo.svg
                          </svg>
                        </div>
                        <div
                          class="truncate"
                        >
                          Atomars
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="swiper-slide"
                  style="height: 155px;"
                >
                  <div
                    class="sc-AxgMl hCbQhX col-span-2 border-theme-primary-contrast"
                    data-testid="Exchange__add-exchange-card"
                  >
                    <div
                      class="flex items-center px-12 my-auto font-semibold text-theme-primary"
                    >
                      <div
                        class="sc-AxirZ iQaTP p-4 mr-4 rounded-lg bg-theme-primary-contrast"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          plus.svg
                        </svg>
                      </div>
                      Add Exchange
                    </div>
                  </div>
                </div>
              </div>
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="swiper-notification"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-20 border-theme-neutral-contrast"
    >
      <div
        class="text-center"
      >
        <svg
          class="mx-auto mt-16"
        >
          exchange-cards-banner.svg
        </svg>
        <div
          class="mt-8 text-theme-neutral-dark"
        >
          Select one of the exchanges you have installed
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
